@@ -876,7 +876,8 @@ TclCompileDictForCmd(
      */
 
     ExceptionRangeTarget(envPtr, loopRange, breakOffset);
-    TclEmitInstInt4( INST_DICT_DONE, infoIndex,			envPtr);
+    TclEmitInstInt1( INST_UNSET_SCALAR, 0,			envPtr);
+    TclEmitInt4(     infoIndex,					envPtr);
     TclEmitOpcode(   INST_END_CATCH,				envPtr);
     endTargetOffset = CurrentOffset(envPtr);
     TclEmitInstInt4( INST_JUMP4, 0,				envPtr);
@@ -889,7 +890,8 @@ TclCompileDictForCmd(
     ExceptionRangeTarget(envPtr, catchRange, catchOffset);
     TclEmitOpcode(   INST_PUSH_RETURN_OPTIONS,			envPtr);
     TclEmitOpcode(   INST_PUSH_RESULT,				envPtr);
-    TclEmitInstInt4( INST_DICT_DONE, infoIndex,			envPtr);
+    TclEmitInstInt1( INST_UNSET_SCALAR, 0,			envPtr);
+    TclEmitInt4(     infoIndex,					envPtr);
     TclEmitOpcode(   INST_END_CATCH,				envPtr);
     TclEmitOpcode(   INST_RETURN_STK,				envPtr);
 
@@ -905,7 +907,8 @@ TclCompileDictForCmd(
 	    envPtr->codeStart + emptyTargetOffset);
     TclEmitOpcode(   INST_POP,					envPtr);
     TclEmitOpcode(   INST_POP,					envPtr);
-    TclEmitInstInt4( INST_DICT_DONE, infoIndex,			envPtr);
+    TclEmitInstInt1( INST_UNSET_SCALAR, 0,			envPtr);
+    TclEmitInt4(     infoIndex,					envPtr);
 
     /*
      * Final stage of the command (normal case) is that we push an empty
